spacing bug fix

--- a/web/src/style/pages.css
+++ b/web/src/style/pages.css
@@ -5,3 +5,13 @@
   overflow-x: hidden;
   max-height: 530px;
 }
+
+.invite-collaborator {
+  &.space-between {
+    align-items: start;
+  }
+
+  & .bttn-primary {
+    margin-top: 32px;
+  }
+}
